--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@splinetool/react-spline": "^4.0.0",
+    "bootstrap": "^5.3.3",
+    "next": "^14.2.9",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.7"
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18"
   }
 }
